---
source: sql-tests/tests/tests.rs
expression: query_result
---
 plan 
------
 1..9
(1 row)

                               ok                                
-----------------------------------------------------------------
 ok 1 - No old-style configurations are present at the beginning
(1 row)

                      ok                       
-----------------------------------------------
 ok 2 - Two metrics retention jobs by default.
(1 row)

                       ok                       
------------------------------------------------
 ok 3 - One metrics compression job by default.
(1 row)

                       ok                        
-------------------------------------------------
 ok 4 - And one traces retention job by default.
(1 row)

 add_job 
---------
    1009
(1 row)

 add_job 
---------
    1010
(1 row)

 config_maintenance_jobs 
-------------------------
 t
(1 row)

                                    ok                                     
---------------------------------------------------------------------------
 ok 5 - Old-style config jobs should be deleted by config_maintenance_jobs
(1 row)

                             ok                             
------------------------------------------------------------
 ok 6 - Only the new-style configurations should be present
(1 row)

 config_maintenance_jobs 
-------------------------
 t
(1 row)

  ok  
------
 ok 7
(1 row)

 config_maintenance_jobs 
-------------------------
 t
(1 row)

  ok  
------
 ok 8
(1 row)

                                    throws_like                                    
-----------------------------------------------------------------------------------
 ok 9 - Should throw exception like 'invalid input syntax for type boolean: "err"'
(1 row)

 finish 
--------
(0 rows)


